// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly QuestionList should render as expected 1`] = `
<body>
  <div>
    <div
      class="border d-flex flex-column rounded shadow-sm"
    >
      <div
        class="border-bottom bg-light p-3 text-center"
      >
        <h2
          class="text-primary mb-0"
        >
          Unanswered
        </h2>
      </div>
      <div
        class="bg-white p-3"
      >
        <div
          class="row row-cols-1 row-cols-md-3 g-3"
        >
          <div
            class="col"
          >
            <div
              class="card shadow-sm h-100"
            >
              <div
                class="card-body text-center"
              >
                <div
                  class="card-title"
                >
                  <span
                    class="fs-7 text-secondary"
                  >
                    Poll by
                  </span>
                  <h5>
                    Tyler McGinnis
                  </h5>
                </div>
                <p
                  class="card-text text-secondary"
                >
                  6:42:47 PM - 12/24/2016
                </p>
              </div>
              <div
                class="card-footer"
              >
                <a
                  class="btn btn-outline-primary w-100"
                  href="/questions/loxhs1bqm25b708cmbf3g"
                >
                  Answer
                </a>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card shadow-sm h-100"
            >
              <div
                class="card-body text-center"
              >
                <div
                  class="card-title"
                >
                  <span
                    class="fs-7 text-secondary"
                  >
                    Poll by
                  </span>
                  <h5>
                    Thuan Dao
                  </h5>
                </div>
                <p
                  class="card-text text-secondary"
                >
                  1:53:33 AM - 3/4/2024
                </p>
              </div>
              <div
                class="card-footer"
              >
                <a
                  class="btn btn-outline-primary w-100"
                  href="/questions/a0xo5jhg6y7tj2hwt3t6k"
                >
                  Answer
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders correctly QuestionList should render as expected 2`] = `
<body>
  <div>
    <div
      class="border d-flex flex-column rounded shadow-sm"
    >
      <div
        class="border-bottom bg-light p-3 text-center"
      >
        <h2
          class="text-primary mb-0"
        >
          Answered
        </h2>
      </div>
      <div
        class="bg-white p-3"
      >
        <div
          class="row row-cols-1 row-cols-md-3 g-3"
        >
          <div
            class="col"
          >
            <div
              class="card shadow-sm h-100"
            >
              <div
                class="card-body text-center"
              >
                <div
                  class="card-title"
                >
                  <span
                    class="fs-7 text-secondary"
                  >
                    Poll by
                  </span>
                  <h5>
                    Thuan Dao
                  </h5>
                </div>
                <p
                  class="card-text text-secondary"
                >
                  1:53:33 AM - 3/4/2024
                </p>
              </div>
              <div
                class="card-footer"
              >
                <a
                  class="btn btn-outline-primary w-100"
                  href="/questions/a0xo5jhg6y7tj2hwt3t6k"
                >
                  Result
                </a>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card shadow-sm h-100"
            >
              <div
                class="card-body text-center"
              >
                <div
                  class="card-title"
                >
                  <span
                    class="fs-7 text-secondary"
                  >
                    Poll by
                  </span>
                  <h5>
                    Mike Tsamis
                  </h5>
                </div>
                <p
                  class="card-text text-secondary"
                >
                  2:16:7 AM - 5/1/2017
                </p>
              </div>
              <div
                class="card-footer"
              >
                <a
                  class="btn btn-outline-primary w-100"
                  href="/questions/xj352vofupe1dqz9emx13r"
                >
                  Result
                </a>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card shadow-sm h-100"
            >
              <div
                class="card-body text-center"
              >
                <div
                  class="card-title"
                >
                  <span
                    class="fs-7 text-secondary"
                  >
                    Poll by
                  </span>
                  <h5>
                    Tyler McGinnis
                  </h5>
                </div>
                <p
                  class="card-text text-secondary"
                >
                  7:9:27 PM - 3/15/2017
                </p>
              </div>
              <div
                class="card-footer"
              >
                <a
                  class="btn btn-outline-primary w-100"
                  href="/questions/vthrdm985a262al8qx3do"
                >
                  Result
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
